[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools-scm[toml]>=8",
]

[project]
name = "gammasimtools"
description = "Tools for the Simulation System of the CTA Observatory"
readme = "README.md"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "simtools developers", email = "simtools-developer@desy.de" },
]
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = [
  "version",
]
dependencies = [
  "astropy",
  "boost-histogram",
  "ctao-dpps-cosmic-ray-spectra",
  "ctapipe",
  "eventio",
  "h5py",
  "jsonschema",
  "matplotlib",
  "numpy",
  "particle",
  "pymongo",
  "pyproj",
  "python-dotenv",
  "pyyaml",
  "scipy",
  "toml",
]
optional-dependencies."dev" = [
  "pre-commit",
  "pylint",
  "ruff",
]
optional-dependencies."doc" = [
  "myst-parser",
  "numpydoc",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-design",
  "towncrier",
]
optional-dependencies."tests" = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-profiling",
  "pytest-random-order",
  "pytest-repeat",
  "pytest-requirements",
  "pytest-retry",
  "pytest-xdist",
]
urls."bug tracker" = "https://github.com/gammasim/simtools/issues"
urls."documentation" = "https://gammasim.github.io/simtools/"
urls."repository" = "https://github.com/gammasim/simtools"
scripts.simtools-calculate-trigger-rate = "simtools.applications.calculate_trigger_rate:main"
scripts.simtools-convert-all-model-parameters-from-simtel = "simtools.applications.convert_all_model_parameters_from_simtel:main"
scripts.simtools-convert-geo-coordinates-of-array-elements = "simtools.applications.convert_geo_coordinates_of_array_elements:main"
scripts.simtools-convert-model-parameter-from-simtel = "simtools.applications.convert_model_parameter_from_simtel:main"
scripts.simtools-db-add-file-to-db = "simtools.applications.db_add_file_to_db:main"
scripts.simtools-db-add-simulation-model-from-repository-to-db = "simtools.applications.db_add_simulation_model_from_repository_to_db:main"
scripts.simtools-db-add-value-from-json-to-db = "simtools.applications.db_add_value_from_json_to_db:main"
scripts.simtools-db-get-array-layouts-from-db = "simtools.applications.db_get_array_layouts_from_db:main"
scripts.simtools-db-get-file-from-db = "simtools.applications.db_get_file_from_db:main"
scripts.simtools-db-get-parameter-from-db = "simtools.applications.db_get_parameter_from_db:main"
scripts.simtools-db-inspect-databases = "simtools.applications.db_inspect_databases:main"
scripts.simtools-derive-ctao-array-layouts = "simtools.applications.derive_ctao_array_layouts:main"
scripts.simtools-derive-mirror-rnda = "simtools.applications.derive_mirror_rnda:main"
scripts.simtools-derive-photon-electron-spectrum = "simtools.applications.derive_photon_electron_spectrum:main"
scripts.simtools-derive-psf-parameters = "simtools.applications.derive_psf_parameters:main"
scripts.simtools-docs-produce-array-element-report = "simtools.applications.docs_produce_array_element_report:main"
scripts.simtools-docs-produce-calibration-reports = "simtools.applications.docs_produce_calibration_reports:main"
scripts.simtools-docs-produce-model-parameter-reports = "simtools.applications.docs_produce_model_parameter_reports:main"
scripts.simtools-docs-produce-simulation-configuration-report = "simtools.applications.docs_produce_simulation_configuration_report:main"
scripts.simtools-generate-array-config = "simtools.applications.generate_array_config:main"
scripts.simtools-generate-corsika-histograms = "simtools.applications.generate_corsika_histograms:main"
scripts.simtools-generate-default-metadata = "simtools.applications.generate_default_metadata:main"
scripts.simtools-generate-regular-arrays = "simtools.applications.generate_regular_arrays:main"
scripts.simtools-generate-sim-telarray-histograms = "simtools.applications.generate_sim_telarray_histograms:main"
scripts.simtools-generate-simtel-event-data = "simtools.applications.generate_simtel_event_data:main"
scripts.simtools-maintain-simulation-model-add-production-table = "simtools.applications.maintain_simulation_model_add_production_table:main"
scripts.simtools-maintain-simulation-model-compare-productions = "simtools.applications.maintain_simulation_model_compare_productions:main"
scripts.simtools-maintain-simulation-model-verify-production-tables = "simtools.applications.maintain_simulation_model_verify_production_tables:main"
scripts.simtools-merge-tables = "simtools.applications.merge_tables:main"
scripts.simtools-plot-array-layout = "simtools.applications.plot_array_layout:main"
scripts.simtools-plot-tabular-data = "simtools.applications.plot_tabular_data:main"
scripts.simtools-plot-tabular-data-for-model-parameter = "simtools.applications.plot_tabular_data_for_model_parameter:main"
scripts.simtools-print-version = "simtools.applications.print_version:main"
scripts.simtools-production-derive-corsika-limits = "simtools.applications.production_derive_corsika_limits:main"
scripts.simtools-production-derive-statistics = "simtools.applications.production_derive_statistics:main"
scripts.simtools-production-generate-grid = "simtools.applications.production_generate_grid:main"
scripts.simtools-production-merge-corsika-limits = "simtools.applications.production_merge_corsika_limits:main"
scripts.simtools-run-application = "simtools.applications.run_application:main"
scripts.simtools-simulate-light-emission = "simtools.applications.simulate_light_emission:main"
scripts.simtools-simulate-prod = "simtools.applications.simulate_prod:main"
scripts.simtools-simulate-prod-htcondor-generator = "simtools.applications.simulate_prod_htcondor_generator:main"
scripts.simtools-submit-array-layouts = "simtools.applications.submit_array_layouts:main"
scripts.simtools-submit-data-from-external = "simtools.applications.submit_data_from_external:main"
scripts.simtools-submit-model-parameter-from-external = "simtools.applications.submit_model_parameter_from_external:main"
scripts.simtools-validate-camera-efficiency = "simtools.applications.validate_camera_efficiency:main"
scripts.simtools-validate-camera-fov = "simtools.applications.validate_camera_fov:main"
scripts.simtools-validate-cumulative-psf = "simtools.applications.validate_cumulative_psf:main"
scripts.simtools-validate-file-using-schema = "simtools.applications.validate_file_using_schema:main"
scripts.simtools-validate-optics = "simtools.applications.validate_optics:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = [ "src" ]
exclude = [ "simtools._dev_version.*" ]

[tool.setuptools_scm]
write_to = "src/simtools/_version.py"

[tool.ruff]
line-length = 100
indent-width = 4
exclude = [
  "__init__.py",
  "pyproject.toml",
  "simtools/_version.py",
]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
# no documentation linting for test files
format.skip-magic-trailing-comma = false
lint.extend-select = [
  "A",   # built-in shadowing
  "C4",  # comprehension
  "COM", # flake8-commas
  "D",   # pydocstyle
  "F",   # pyflakes
  "G",   # logging
  "I",   # isort
  "ICN", # import name conventions
  "ISC", # implicit string concat rules
  "N",   # pep8 naming
  "NPY", # numpy
  "PT",  # pytest
  "PTH", # use pathlib
  "RET", # return statements
  "RUF", # ruff
  "UP",  # pyupgrade
]
lint.ignore = [
  "COM812", # incompatible with ruff format
  "D208",   # over-indentation (incompatible with sphinx)
  "D214",   # section-not-over-indented
  "D215",   # section-underline-not-over-indented
  "G004",   # Logging statement uses f-string
  "ISC001", # incompatible with ruff format
  "PTH123", # open("foo") should be replaced by Path("foo").open()
  "RUF012", #  Mutable class attributes should be annotated
]
lint.per-file-ignores."**/tests/**" = [
  "D",
]
lint.per-file-ignores."**/tests_*.py" = [
  "D",
]

lint.pydocstyle.convention = "numpy"

[tool.pylint.main]
# Good variable names which should always be accepted, separated by a comma.
good-names = [
  "e",
  "i",
  "j",
  "k",
  "x",
  "y",
  "n",
  "f",
  "r",
  "ex",
  "db",
  "im",
  "sh",
  "ax",
  "ce",
  "xx",
  "yy",
  "zz",
  "C1",
  "C2",
  "C3",
  "C4",
  "C4x",
  "N1",
  "N2",
  "N3",
  "N4",
  "N4x",
  "lst",
  "mst",
  "sst",
  "sct",
  "hess",
  "magic",
  "veritas",
]
# Ignore files
ignore = [
  "__init__.py",
  "scm_version.py",
  "_version.py",
  "legend_handlers.py",
]

# See discussion in issue 521
# Agreed to not have module docstring (missing-module-docstring)
# Pylint cannot handle overload (used in pyproj; unpacking-non-sequence)
disable = [
  "missing-module-docstring",
  "unpacking-non-sequence",
  "logging-format-interpolation",
  "fixme",
  "missing-function-docstring",
  "R0801",                         # duplications
  "logging-fstring-interpolation",
]
# see https://github.com/pylint-dev/pylint/issues/2289
generated-members = [
  "gist_heat_r",
]
# see https://stackoverflow.com/questions/49846940/incorrect-pylint-errors-on-astropy-in-vscode
# (required to suppress warnings from astropy.units when using pylint; not only vscode)
ignored-classes = [
  "astropy.units",
]

# Maximum number of characters on a single line.
max-line-length = 100
# Maximum number of lines in a module. (default 1000)
max-module-lines = 2000
# Maximum number of branch for function / method body. (default=12)
max-branches = 25
# Maximum number of arguments for function / method (default=5).
max-args = 15
# Maximum number of locals for function / method body (default=15).
max-locals = 50
# Maximum number of attributes for a class (see R0902). (default=7)
max-attributes = 50
# Maximum number of positional arguments for function / method (default=5.)
max-positional-arguments = 15
# Maximum number of statements in function / method body. (default=50)
max-statements = 80
# Maximum number of public methods for a class (see R0904). (default=20)
max-public-methods = 50

[tool.codespell]
ignore-words-list = "chec,arrang,livetime"

[tool.pytest.ini_options]
markers = [
  "uses_model_database: test uses model parameter database.",
]
minversion = "6.0"
norecursedirs = [
  "build",
  "docs/_build",
  "src/simtools/applications",
]
addopts = [
  "-v",
  "--cov=simtools",
  "--cov-report=xml",
  "--cov-report=term",
  "-p",
  "pytest_requirements",
]
testpaths = "tests/unit_tests/"
# Ignore the warning about fontTools.misc.py23
filterwarnings = "ignore:The py23 module has been deprecated:DeprecationWarning"

[tool.coverage.report]
exclude_also = [
  "if __name__ == \"__main__\":",
]

[tool.coverage.run]
omit = [ "src/simtools/_version.py", "*__init__*", "src/simtools/applications/**" ]
relative_files = true

[tool.towncrier]
package = "simtools"
directory = "docs/changes"
filename = "CHANGELOG.md"
underlines = [ "", "", "" ]
title_format = "## [{version}](https://github.com/gammasim/simtools/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/gammasim/simtools/pull/{issue})"
start_string = "<!-- towncrier release notes start -->\n"

[tool.towncrier.fragment.feature]
name = "New Features"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.api]
name = "API Changes"
showcontent = true

[tool.towncrier.fragment.maintenance]
name = "Maintenance"
showcontent = true

[tool.towncrier.fragment.doc]
name = "Documentation"
showcontent = true

[tool.towncrier.fragment.model]
name = "Simulation model"
showcontent = true
